# complianceTracker

./: README.md  app.py  checklist_generator.py  config.py  pdf_processor.py  persistent_cache.db  pyproject.toml  rag_system.py  requirements.txt
api_response_cache/: cache.db
static/: script.js  style.css
templates/: document_details.html  documents.html  index.html  login.html  register.html
